[tool.poetry]
name = "botwhatsapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
webwhatsapi = "^2.0.5"
flask = "^1.1.2"
youtube-dl = "^2021.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
